@@ -251,6 +251,7 @@ namespace MonoDevelop.Projects.Dom
 					}
 				}
 				foreach (IMember member in curType.Members) {
+					System.Console.WriteLine (member);
 					if (callingMember != null && !member.IsAccessibleFrom (dom, type, callingMember))
 						continue;
 					if (member is IMethod && ((IMethod)member).IsConstructor)
